tests/baselines/reference/octal-invalid-leading.errors.txt
octal-invalid-leading.ts(22,1): error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
octal-invalid-leading.ts(22,3): error TS1005: ';' expected.
octal-invalid-leading.ts(22,3): error TS2304: Cannot find name 'o0'.


==== octal-invalid-leading.ts (3 errors) ====
    // Copyright (C) 2015 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es6id: 11.8.3
    description: Octal-integer-literal-like sequence with a leading 0
    info: |
        OctalIntegerLiteral ::
          0o OctalDigits
          0O OctalDigits
        OctalDigits ::
          OctalDigit
          OctalDigits OctalDigit
        OctalDigit :: one of
          0 1 2 3 4 5 6 7
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    00o0;
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
      ~~
!!! error TS1005: ';' expected.
      ~~
!!! error TS2304: Cannot find name 'o0'.
    